Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 # Build with MSBuild
-- task: MSBuild@1
+- task: 'MSBuild'
   inputs:
     solution: '*.sln' 
     #msbuildLocationMethod: 'version' # Optional. Options: version, location
