Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,10 @@
-trigger:
-- master
+resources:
+- repo: self
 
-# Build with MSBuild
-- task: 'MSBuild'
-  inputs:
-    solution: '*.sln' 
-    #msbuildLocationMethod: 'version' # Optional. Options: version, location
-    #msbuildVersion: 'latest' # Optional. Options: latest, 15.0, 14.0, 12.0, 4.0
-    #msbuildArchitecture: 'x86' # Optional. Options: x86, x64
-    #msbuildLocation: # Optional
-    #platform: # Optional
-    #configuration: # Optional
-    #msbuildArguments: # Optional
-    #clean: false # Optional
-    #maximumCpuCount: false # Optional
-    #restoreNugetPackages: false # Optional
-    #logProjectEvents: false # Optional
-    #createLogFile: false # Optional
+queue:
+  name: Hosted VS2017
+  demands: msbuild
+
+steps:
+- task: MSBuild@1
+  displayName: 'Build solution **/*.sln'
