Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,5 +12,7 @@ queue:
 
 steps:
 - checkout: self
+- powershell: |
+    git clone https://github.com/DustParticle/SsdSim.git
 - task: VSBuild@1
   displayName: 'Build solution **/*.sln'
