Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
     configuration: release
     platform: x64
 - powershell: |
-    ./x64/Release/Test.exe
+    ./SsdSim/x64/Release/Test.exe
