--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ queue:
   demands: msbuild
 
 steps:
-- powershell: |
+- script: |
     git clone https://github.com/DustParticle/SsdSim.git
 - task: NuGetCommand@2
   inputs:
@@ -21,5 +21,6 @@ steps:
   inputs:
     configuration: release
     platform: x64
-- powershell: |
+- script: |
     ./SsdSim/x64/Release/Test.exe
+  displayName: 'Running Tests'
