--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,21 +6,17 @@ resources:
       ref: 'refs/heads/master'  # ref name to use, defaults to 'refs/heads/master'
       endpoint: 'Github connection 1'  # name of the service connection to use (for non-Azure Repos types)
 
-queue:
-  name: Hosted VS2017
-  demands: msbuild
-
-steps:
-- script: |
-    git clone https://github.com/DustParticle/SsdSim.git
-- task: NuGetCommand@2
-  inputs:
-    command: 'restore'
-- task: VSBuild@1
-  displayName: 'Build solution **/*.sln'
-  inputs:
-    configuration: release
-    platform: x64
-- script: |
-    SsdSim/x64/Release/Test.exe
-  displayName: 'Running Tests'
+jobs:
+- job: 'Main'
+  steps:
+  - script: git clone https://github.com/DustParticle/SsdSim.git
+  - task: NuGetCommand@2
+    inputs:
+      command: 'restore'
+  - task: VSBuild@1
+    displayName: 'Build solution **/*.sln'
+    inputs:
+      configuration: release
+      platform: x64
+  - powershell: ./SsdSim/x64/Release/Test.exe
+    displayName: 'Running Tests'
