--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,10 @@ jobs:
     matrix: 
       x64_Release:
         BuildConfiguration: release
-        BuidPlatform: x64
+        BuildPlatform: x64
       x64_Debug:
         BuildConfiguration: debug
-        BuidPlatform: x64
+        BuildPlatform: x64
   steps:
   - script: git clone https://github.com/DustParticle/SsdSim.git
   - task: NuGetCommand@2
