--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,13 +16,13 @@ jobs:
         BuildPlatform: x64
         TestExe: './SsdSim/x64/Release/Test.exe'
         ArtifactPath: './SsdSim/x64/Release/'
-        ArtifactName: 'x64_Release'
+        ArtifactName: 'x64Release'
       x64_Debug:
         BuildConfiguration: debug
         BuildPlatform: x64
         TestExe: './SsdSim/x64/Debug/Test.exe'
         ArtifactPath: './SsdSim/x64/Debug/'
-        ArtifactName: 'x64_Debug'
+        ArtifactName: 'x64Debug'
   steps:
   - script: git clone https://github.com/DustParticle/SsdSim.git
   - task: NuGetCommand@2
@@ -46,12 +46,15 @@ jobs:
     maxParallel: 2
     matrix:
       x64_Release:
+        ArtifactName: 'x64Release'
         TestExe: $(System.DefaultWorkingDirectory)'Test.exe'
       x64_Debug:
+        ArtifactName: 'x64Debug'
         TestExe: $(System.DefaultWorkingDirectory)'Test.exe'
   steps:
   - task: DownloadPipelineArtifact@0
     inputs:
+      artifactName: $(ArtifactName)
       targetPath: $(System.DefaultWorkingDirectory)
   - powershell: $(TestExe)
   displayName: 'Running Tests'
