River flow auto-commit

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,1 @@
-
-jobs:
-- job: Test1
-  condition: eq(variables['JobName'], 'Test1')
-  steps:
-  - script: echo Hello TEST NUMBER 1
-
-- job: Test2
-  condition: eq(variables['JobName'], 'Test2')
-  steps:
-  - script: echo Hello TEST NUMBER 2
+my new file contents
