River flow auto-commit

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,8 @@ jobs:
   - task: PublishPipelineArtifact@0
     inputs:
       artifactName: x64Release
-      targetPath: ./SsdSim/x64/Release/  - script: 'node updateEndJob.js'
+      targetPath: ./SsdSim/x64/Release/
+    - script: 'node updateEndJob.js'
 
 
 - job: UNIT_TEST
@@ -28,6 +29,7 @@ jobs:
     inputs:
       artifactName: x64Release
       targetPath: $(System.DefaultWorkingDirectory)
-  - powershell: $(System.DefaultWorkingDirectory)'/Test.exe'  - script: 'node updateEndJob.js'
+  - powershell: $(System.DefaultWorkingDirectory)'/Test.exe'
+    - script: 'node updateEndJob.js'
 
 
