River flow auto-commit

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,10 +13,12 @@ jobs:
     inputs:
       configuration: release
       platform: x64
-  - task: PublishPipelineArtifact@0
+  - task: PublishBuildArtifacts@1
     inputs:
-      artifactName: x64Release
-      targetPath: ./SsdSim/x64/Release/
+      PathtoPublish: ./SsdSim/x64/Release/
+      ArtifactName: ssdsimpackage
+      publishLocation: FilePath
+      TargetPath: '\\my\share\artifacts'
   - script: 'node updateEndJob.js'
 
 
@@ -25,11 +27,12 @@ jobs:
   steps:
   - script: 'npm install'
   - script: 'node updateBeginJob.js'
-  - task: DownloadPipelineArtifact@0
+  - task: DownloadFileshareArtifacts@1
     inputs:
-      artifactName: x64Release
-      targetPath: $(System.DefaultWorkingDirectory)
-  - powershell: $(System.DefaultWorkingDirectory)'/Test.exe'
+      filesharePath: '\\my\share\artifacts'
+      artifactName: ssdsimpackage
+  - powershell: ls $(System.ArtifactsDirectory)
+  - powershell: $(System.ArtifactsDirectory)'/Test.exe'
   - script: 'node updateEndJob.js'
 
 
