--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ jobs:
   condition: eq(variables['JobName'], 'BUILD_SSDSIM')
   steps:
   - script: 'npm install'
-  - script: 'node updateBeginJob.js $(RiverflowApiKey)'
+  - script: 'node updateBeginJob.js "$(RiverflowApiKey)"'
   - script: git clone https://github.com/DustParticle/SsdSim.git
   - task: NuGetCommand@2
     inputs:
@@ -17,20 +17,20 @@ jobs:
     inputs:
       artifactName: x64Release
       targetPath: ./SsdSim/x64/Release/
-  - script: 'node updateEndJob.js $(RiverflowApiKey)'
+  - script: 'node updateEndJob.js "$(RiverflowApiKey)"'
 
 
 - job: UNIT_TEST
   condition: eq(variables['JobName'], 'UNIT_TEST')
   steps:
   - script: 'npm install'
-  - script: 'node updateBeginJob.js $(RiverflowApiKey)'
+  - script: 'node updateBeginJob.js "$(RiverflowApiKey)"'
   - task: DownloadPipelineArtifact@0
     inputs:
       pipelineId: '$(build.buildid) - 1'
       artifactName: x64Release
       targetPath: $(System.DefaultWorkingDirectory)
   - powershell: $(System.DefaultWorkingDirectory)'/Test.exe'
-  - script: 'node updateEndJob.js $(RiverflowApiKey)'
+  - script: 'node updateEndJob.js "$(RiverflowApiKey)"'
 
 
