--- a/obsolete project with riverflow/azure-pipelines.yml
+++ b/obsolete project with riverflow/azure-pipelines.yml
@@ -1,7 +1,9 @@
 jobs:
 - job: BUILD_SSDSIM
+  condition: eq(variables['JobName'], 'BUILD_SSDSIM')
   steps:
   - script: 'npm install'
+  - script: 'node updateBeginJob.js "$(RiverflowApiKey)"'
   - script: 'printenv'
   - script: git clone https://github.com/DustParticle/SsdSim.git
   - task: NuGetCommand@2
@@ -16,11 +18,14 @@ jobs:
     inputs:
       artifactName: x64Release
       pathtoPublish: ./SsdSim/x64/Release/
+  - script: 'node updateEndJob.js "$(RiverflowApiKey)"'
 
 
 - job: UNIT_TEST
+  condition: eq(variables['JobName'], 'UNIT_TEST')
   steps:
   - script: 'npm install'
+  - script: 'node updateBeginJob.js "$(RiverflowApiKey)"'
   - script: 'printenv'
   - task: DownloadBuildArtifacts@0
     inputs:
@@ -32,5 +37,6 @@ jobs:
       artifactName: x64Release
       downloadPath: $(System.DefaultWorkingDirectory)
   - powershell: 'x64Release/Test.exe'
+  - script: 'node updateEndJob.js "$(RiverflowApiKey)"'
 
 
