--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,5 @@
 jobs:
 - job: BUILD_SSDSIM
-  condition: eq(variables['JobName'], 'BUILD_SSDSIM')
   pool:
     name: Hosted VS2017
     demands:
@@ -26,6 +25,9 @@ jobs:
 
 
 - job: UNIT_TEST
+  dependsOn: Phase_1
+  pool:
+    name: Hosted Windows Container
   condition: eq(variables['JobName'], 'UNIT_TEST')
   steps:
   - script: 'npm install'
@@ -36,7 +38,6 @@ jobs:
       project: 'SsdSim'
       pipeline: 'SsdSim-CI'
       buildVersionToDownload: 'specific'
-      buildId: $(AZUREDEVOPSBUILDID)
       artifactName: x64Release
       downloadPath: $(System.DefaultWorkingDirectory)
   - powershell: 'x64Release/Test.exe'
