--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,11 @@ jobs:
 - job: UNIT_TEST
   dependsOn: BUILD_SSDSIM
   pool:
-    name: Hosted Windows Container
+    name: Hosted VS2017
+    demands:
+    - msbuild
+    - visualstudio
+    - vstest
   steps:
   - script: 'npm install'
   - script: 'printenv'
