--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,12 @@ jobs:
   steps:
   - script: 'npm install'
   - script: 'printenv'
+  - script: |
+      AZUREDEVOPSBUILDID=$(Build.ContainerId)
+      echo "##vso[task.setvariable variable=AZUREDEVOPSBUILDID;isOutput=true] Storing AZUREDEVOPSBUILDID"
+    name: stepSetAzureDevopsBuildID
+  - script: |
+      echo "$(stepSetAzureDevopsBuildID.AZUREDEVOPSBUILDID)"
   - script: git clone https://github.com/DustParticle/SsdSim.git
   - task: NuGetCommand@2
     inputs:
@@ -26,6 +32,9 @@ jobs:
 
 - job: UNIT_TEST
   dependsOn: BUILD_SSDSIM
+  variables:
+    # Define the variable AZUREDEVOPSBUILDID from the previous job
+    AZUREDEVOPSBUILDID: $[ dependencies.BUILD_SSDSIM.outputs['stepSetAzureDevopsBuildID.AZUREDEVOPSBUILDID'] ]
   pool:
     name: Hosted VS2017
     demands:
@@ -41,6 +50,7 @@ jobs:
       project: 'SsdSim'
       pipeline: 'SsdSim-CI'
       buildVersionToDownload: 'specific'
+      buildId: $(AZUREDEVOPSBUILDID)
       artifactName: x64Release
       downloadPath: $(System.DefaultWorkingDirectory)
   - powershell: 'x64Release/Test.exe'
