--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,7 @@ jobs:
   steps:
   - script: 'npm install'
   - script: 'printenv'
-  - script: |
-      echo "##vso[task.setvariable variable=AZUREDEVOPSBUILDID;isOutput=true]$(Build.ContainerId)"
+  - script: echo '##vso[task.setvariable variable=AZUREDEVOPSBUILDID;isOutput=true]$(Build.ContainerId)
     name: stepSetAzureDevopsBuildID
   - script: |
       echo "$(stepSetAzureDevopsBuildID.AZUREDEVOPSBUILDID)"
