--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
     inputs:
       artifactName: x64Release
       pathtoPublish: ./SsdSim/x64/Release/
-
+  - script: echo $(Agent.JobStatus)
 
 - job: UNIT_TEST
   dependsOn: BUILD_SSDSIM
@@ -46,11 +46,11 @@ jobs:
     inputs:
       buildType: 'specific'
       project: 'SsdSim'
-      pipeline: 'SsdSim-CI'
+      pipeline: $(System.DefinitionName)
       buildVersionToDownload: 'specific'
       buildId: $(AZUREDEVOPSBUILDID)
       artifactName: x64Release
       downloadPath: $(System.DefaultWorkingDirectory)
   - powershell: 'x64Release/Test.exe'
-
+  - script: echo $(Agent.JobStatus)
 
